# OptiTime-Decision-Support-System

./: .env  .env.example  .gitignore  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
apps/ai-service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/ai-service/app/: main.py  models.py  security.py  settings.py
apps/ai-service/app/pipelines/: embeddings.py  rag.py  sentiment.py  weekly_summary.py
apps/web/: README.md  next.config.ts  package.json  pnpm-lock.yaml
apps/web/src/app/: page.tsx  (+2 more)
docs/: architecture.md  deployment-railway.md  local-dev.md  stack.md
services/api/: package.json  pnpm-lock.yaml  tsconfig.json
services/api/src/: app.module.ts  main.ts
services/src/: app.module.ts  main.ts
services/src/config/: config.module.ts  config.service.ts  env.validation.ts
services/src/health/: health.controller.ts
services/src/jobs/: jobs.module.ts  jobs.service.ts  queues.ts
services/src/reflections/: reflections.module.ts  reflections.service.ts
src/: app.module.ts  main.ts
src/auth/: auth.controller.ts  auth.module.ts  firebase-admin.provider.ts  firebase-auth.guard.ts
src/chat/: chat.controller.ts  chat.service.ts
src/config/: config.service.ts  env.validation.ts
src/jobs/: jobs.module.ts  jobs.service.ts
src/reflections/: reflections.controller.ts  reflections.service.ts
src/sessions/: sessions.controller.ts  sessions.service.ts
src/tasks/: tasks.controller.ts  tasks.service.ts
src/users/: users.controller.ts  users.service.ts
(+59 files in other folders)
